<resources>
    <string name="app_name">Tradly</string>
    <string name="title_home">Home</string>
    <string name="title_browse">Browse</string>
    <string name="title_store">Store</string>
    <string name="title_history">Order History</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc1"><![CDATA[Empowering Artisans,\nFarmers & Micro Business]]></string>
</resources>