<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ozeito.tradly.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.ozeito.tradly.fragment.BrowseFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse" />
    <fragment
        android:id="@+id/navigation_store"
        android:name="com.ozeito.tradly.fragment.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.ozeito.tradly.fragment.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ozeito.tradly.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>